--- a/frontend/package.json
+++ b/frontend/package.json
@@ -59,6 +59,8 @@
     "react": "18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
+    "pdfjs-dist": "^4.6.82",
+    "mammoth": "^1.6.0",
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.12.7",
